--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Enhanced Navigation Template</title>
     <meta name="description" content="This app template allows for easy navigation setup with login, registration, and dashboard pages." />
     <link rel="icon" type="image/svg+xml" href="/placeholder.svg" />
+    <link href="https://fonts.googleapis.com/css2?family=Maven+Pro:wght@400;500;600;700&display=swap" rel="stylesheet">
 
     <meta property="og:title" content="Enhanced Navigation Template" />
     <meta property="og:description" content="This app template allows for easy navigation setup with login, registration, and dashboard pages." />
