--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Enhanced Navigation Template</title>
+    <title>Affiliate hub Property Investors</title>
     <meta name="description" content="This app template allows for easy navigation setup with login, registration, and dashboard pages." />
-    <link rel="icon" type="image/svg+xml" href="/placeholder.svg" />
+    <link rel="icon" type="image/svg+xml" href="/logo.png" />
     <link href="https://fonts.googleapis.com/css2?family=Maven+Pro:wght@400;500;600;700&display=swap" rel="stylesheet">
 
-    <meta property="og:title" content="Enhanced Navigation Template" />
+    <meta property="og:title" content="Affiliate hub Property Investors" />
     <meta property="og:description" content="This app template allows for easy navigation setup with login, registration, and dashboard pages." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="/og.jpg" />
